<resources>
    <string name="app_name">DebugApp</string>
    <string name="emailTag">E-Mail</string>
    <string name="pwTag">Password</string>
    <string name="confirmPwTag">Confirm password</string>
    <string name="enterEmail">Enter email address</string>
    <string name="enterPw">Enter password</string>
    <string name="registerB">Register</string>
    <string name="loginB">Login</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="todo">TODO</string>
    <string name="product_details">product details</string>
    <string name="todo2">TODO2</string>
    <string name="product_name">Product name and maybe a little longer ofcourse just for testing</string>
    <string name="toys">Toys</string>
    <string name="office">Office</string>
    <string name="menu">Menu</string>
    <string name="search">Search items</string>
    <string name="searchbutton">searchbutton</string>
    <string name="electronics">Electronics</string>
    <string name="books">Books</string>
    <string name="popular_items">Popular items</string>
    <string name="dimmed_monitor">Dimmed monitor and everything you want and maybe even more</string>
    <string name="crayons">Crayons</string>
    <string name="laptop">Laptop</string>
    <string name="book">Book</string>
    <string name="settings">Settings</string>
    <string name="login_automaticly">login automaticly</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_login_info">Change login information</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="product_name_changeprice">Product has changed price!</string>
    <string name="rndPrice">19.99€</string>
    <string name="setAlert">Set Alert</string>
    <string name="directCheckout">Buy now</string>
    <string name="appIcon">Start</string>
    <string name="backButton">Back</string>
    <string name="alert">Set alert for:</string>
    <string name="setPrice">Set your desired price  in €</string>
    <string name="save">Save</string>
    <string name="setDuration">Set duration of alert:</string>
    <string name="checkboxDay">1 Day</string>
    <string name="checkboxWeek">1 Week</string>
    <string name="checkboxWeeks">2 Weeks</string>
    <string name="notificationListHeader">Your notifications</string>
    <string name="notificationSampleText">Price has been met!</string>
    <string name="activeAlertListHeader">Your active alerts</string>
    <string name="deleteButton">Delete marked</string>
    <string name="alertToProduct">To product</string>
    <string name="rndCreationDate">32–13–2020</string>
    <string name="makePic">Make Picture</string>
    <string name="changeEmail">Change email address</string>
    <string name="enterNewEmail">Enter new email address</string>
    <string name="enterNewPw">Enter new Password</string>
    <string name="changePassword">Change password:</string>
    <string name="buttonSend">Change</string>
</resources>
