<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_file">

    <TextView
        android:id="@+id/emailTagL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/emailTag"
        android:textColor="@color/blackColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterEmailL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/enterEmailL"
        android:layout_width="wrap_content"
        android:ems="10"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:autofillHints="@string/app_name"
        android:hint="@string/enterEmail"
        android:textColorHint="@color/blackColor"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        android:background="@drawable/enter_text_lr"
        app:layout_constraintBottom_toTopOf="@+id/pwTagL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTagL" />

    <TextView
        android:id="@+id/pwTagL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/pwTag"
        android:textColor="@color/blackColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterPwL"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailL"
        tools:layout_editor_absoluteX="7dp" />

    <EditText
        android:id="@+id/enterPwL"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="@string/app_name"
        android:hint="@string/enterPw"
        android:textColorHint="@color/blackColor"
        android:background="@drawable/enter_text_lr"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwTagL" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/registerB"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:background="@color/blueColor"
            android:text="@string/registerB"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:onClick="goToRegisterPage"/>

        <Button
            android:id="@+id/loginB"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:background="@color/blueColor"
            android:text="@string/loginB"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:onClick="goToMainPage"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>