<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_file">

    <RelativeLayout
        android:id="@+id/appTopBarSAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/alertForProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/appIconLayoutSAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/table_border">

            <ImageView
                android:id="@+id/appIconSAP"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/app_icon_64px"
                android:contentDescription="@string/appIcon" />

            <TextView
                android:id="@+id/appIconTextSAP"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appIconSAP"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:text="@string/appIcon"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/backButtonSAP"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/blueColor"
            android:text="@string/backButton"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:onClick="backToProductPage"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alertForProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTopBarSAP">

        <TextView
            android:id="@+id/setAlertFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alert"
            android:textColor="@color/blackColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setAlertProductName"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/setAlertFor"
            android:background="@drawable/table_border"
            android:gravity="center"
            android:text="@string/product_name"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/setPrice"
        android:background="@drawable/enter_text_lr"
        android:gravity="center"
        android:hint="@string/setPrice"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/setAlertTimeFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertForProduct" />

    <RelativeLayout
        android:id="@+id/setAlertTimeFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <TextView
            android:id="@+id/setDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setDuration"
            android:textColor="@color/blackColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/CheckboxesForDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setDuration"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/table_border"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Checkbox1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:scaleX="1.20"
                android:scaleY="1.20"
                android:text="@string/checkboxDay"
                android:textColor="@color/blackColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/Checkbox2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:scaleX="1.20"
                android:scaleY="1.20"
                android:text="@string/checkboxWeek"
                android:textColor="@color/blackColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/Checkbox3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:scaleX="1.20"
                android:scaleY="1.20"
                android:text="@string/checkboxWeeks"
                android:textColor="@color/blackColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
	
    <Button
        android:id="@+id/button13"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="40dp"
        android:background="@color/blueColor"
        android:text="@string/save"
        android:textColor="@color/whiteColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

