<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_file">

    <Button
        android:id="@+id/backButtonRP"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blueColor"
        android:text="@string/backButton"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTagR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backToLoginPage"/>

    <TextView
        android:id="@+id/emailTagR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/emailTag"
        android:textColor="@color/blackColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterEmailR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterEmailR"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:autofillHints="@string/enterEmail"
        android:hint="@string/enterEmail"
        android:textColorHint="@color/blackColor"
        android:background="@drawable/enter_text_lr"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pwTagR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTagR" />

    <TextView
        android:id="@+id/pwTagR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/pwTag"
        android:textColor="@color/blackColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterPwR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailR" />

    <EditText
        android:id="@+id/enterPwR"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:autofillHints="@string/enterPw"
        android:hint="@string/enterPw"
        android:textColorHint="@color/blackColor"
        android:background="@drawable/enter_text_lr"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPwTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwTagR" />

    <TextView
        android:id="@+id/confirmPwTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/confirmPwTag"
        android:textColor="@color/blackColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmPwR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPwR" />

    <EditText
        android:id="@+id/confirmPwR"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="77dp"
        android:autofillHints="@string/confirmPwTag"
        android:hint="@string/confirmPwTag"
        android:textColorHint="@color/blackColor"
        android:background="@drawable/enter_text_lr"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/registerBR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPwTag" />

    <Button
        android:id="@+id/registerBR"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="70dp"
        android:background="@color/blueColor"
        android:text="@string/registerB"
        android:textColor="@color/whiteColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPwR"
        android:onClick="goToLoginPage"/>

</androidx.constraintlayout.widget.ConstraintLayout>